src/test/ui/compile-fail-migration/glob-cycles.stderr
error: compilation successful
  --> $DIR/glob-cycles.rs:29:1
   |
LL | pub fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^^^^^

error: aborting due to previous error

